# sbrowser

./: ChangeLog.md  README.md  package.yaml  sbrowser.cabal
app/: Main.hs
src/: BrowserInterface.hs  EntryCursor.hs
src/SBrowser/: FileInfo.hs  TUInterface.hs  Utils.hs
