cabal-version: 1.12

name:           sbrowser
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/sbrowser#readme>
homepage:       https://github.com/apkhandkar/sbrowser#readme
author:         Arjun Khandkar
maintainer:     khandkararjun@gmail.com
copyright:      2020 Arjun Khandkar
license:        Unlicense
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/apkhandkar/sbrowser

library
  exposed-modules:
      BrowserInterface
      EntryCursor
  other-modules:
      Paths_sbrowser
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , brick >=0.50
    , directory >=1.2
    , vty >=5.24
  default-language: Haskell2010

executable sbrowser-exe
  main-is: Main.hs
  other-modules:
      Paths_sbrowser
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , brick >=0.50
    , directory >=1.2
    , sbrowser
    , vty >=5.24
  default-language: Haskell2010

test-suite sbrowser-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_sbrowser
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , brick >=0.50
    , directory >=1.2
    , sbrowser
    , vty >=5.24
  default-language: Haskell2010
